# fullstack-todo-with-chatbot

./: .gitignore  COMPLETE_FIX_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_ENV_GUIDE.md  Dockerfile  ENV_SETUP_GUIDE.md  FINAL_DEPLOYMENT_CHECKLIST.md  MANUAL_DEPLOYMENT_STEPS.md  PRODUCTION_READY.md  QUICK_START_DEPLOY.md  README.md  START_HERE.md  TOOL_CALLING_IMPLEMENTATION_REPORT.md  app.py  deployment_instructions.md  pyproject.toml  requirements.txt  test_chat.json  test_tool_calling.ps1  vercel.json  vercel_deployment_output.md
backend/: .env.example  ENVIRONMENT_VARIABLES.md  connect_to_neon.py  connect_to_neon_simple.py  requirements.txt  run_db_init.py
backend/scripts/: init_neon_tables.py
backend/src/: auth.py  auth_config.py  database.py  main.py  mcp_server.py
backend/tests/: conftest.py  test_database.py  test_health.py  test_integration.py  test_mcp_tools.py  test_models.py  test_tasks.py
frontend/: .env.example  .env.production  IMPLEMENTATION.md  jest.config.js  next.config.js  package.json  tailwind.config.js
frontend/.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json  fallback-build-manifest.json  images-manifest.json  prerender-manifest.json  required-server-files.js  required-server-files.json  routes-manifest.json  trace  trace-build
frontend/__tests__/: ChatInterface.error.test.tsx  chat.utils.test.ts  integration.e2e.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatInput.tsx  ChatInterface.tsx  LoadingIndicator.tsx  MessageList.tsx
src/: main.py
(+608 files in other folders)
