[project]
name = "cli-todo-app"
version = "0.1.0"
description = "A console-based todo application with in-memory storage"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Developer", email = "developer@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
todo-app = "src.main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-mock>=3.10.0"
]